the next Commit startwithBismillah!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheNewCollege">
         <activity
+            android:name=".OfficeAdminPanel"
+            android:exported="false" />
+        <activity
+            android:name=".OfficeAdminAuth"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPasswordActivity"
             android:exported="true" />
         <activity
